Revision history for FusionInventory agent

2.3.18 not yet released
* add g-bougard as maintainer

2.3.17 Sun, 27 Sep 2015
inventory:
* add collect task support
* fix CPU frequency retrieval on Windows (#2876)
* fix CPU core and thread retrieval on Windows (#2894)
* small fixes for DragonFlyBSD (#2899)
* fix interface speed retrieval in Solaris zones (#2939)
* fix memory information retrieval on Solaris (#2907)
* fix recurrent timeout for system_profile usage on MacOS (#2913)
* fix hangup when enumerating ovirt virtual machines (#2917)
* fix virtuozzo virtual machines identification (reported on mailing-list)
* fix offline xen virtual machines properties retrieval (#2988)
* fix warning and parsing issues with LSI RAID adapter
* retrieve Rudder agent information for all kind of Unix systems (#2999)

netdiscovery:
* fix multi-threading issues

netinventory:
* better serial retrieval (#2912)
* better VLAN retrieval for non-Cisco devices
* fix firmware retrieval issues leading to malformed XML (#2908, #2956, #2994)
* fix multi-threading issues
* add support for Kyocera printers page counters
* additional devices in sysobject.ids (#2912, #2932, #2965, #2966, #2994)
* minor fixes in sysobject.ids
* relax constraints on sysobjectid syntax

wake-on-lan:
* fix communication issue with latest FusionInventory for GLPI (#2937)

fusioninventory-injector:
* allow to mimic agent in user-agent HTTP header

fusioninventory-netinventory:
* support multi-threading via --threads option
* support inventory toward multiple hosts
* dropped unused --entity option

test suite:
* more robust SSL connection tests

2.3.16 Sun, 1 Mar 2015
inventory:
* fix Rudder server UUID file location (#2865)
* use BIOS ID as guest ID for HyperV hypervisor (#2881)
* filter disabled CPUs in DMI data (#2525)
* minor fixes in CPU information retrieval

netdiscovery:
* fix communication with latest FusionInventory for GLPI (#2862)
* add multiple H3C/SMC/HP models in sysobject.ids (#2873)