@@ -1,6 +1,9 @@
 Revision history for FusionInventory agent
 
 2.3.18 not yet released
+deployment:
+* trigger error on servers missing Digest::SHA library to help diagnostic
+
 * add g-bougard as maintainer
 
 2.3.17 Sun, 27 Sep 2015
